--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-transformers==4.40.0
-torch==2.1.0
-datasets==2.19.0
-accelerate==0.30.0
-tqdm==4.66.4
+transformers>=4.40.0
+datasets>=2.18.0
+torch>=2.1.0
+peft>=0.10.0
+accelerate>=0.27.0
+tqdm
+peft==0.10.0
