Added evaluation and test scripts to .gitignore to exclude them from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,12 @@ Thumbs.db
 
 # Ignore Hugging Face cache
 ~/.cache/huggingface/
+
+# Custom: ignore evaluation and test scripts
+evaluation_batch_inference.py
+evaluation_inference.py
+test_data_loader.py
+test_lora.py
+test_model_generation.py
+test_model_loader.py
+test_training_args.py
